Syntaxe/Test/Valide/test_instruction_vide.deca
// Description:
//    Programme testant l'instruction vide
//
// Resultats:
//   
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 10/01/2012



{
   ;
}