Syntaxe/Test/Invalide/test_blocs_vides.deca
// Description:
//    test d'un fichier avec beaucoup de bloc
//
// Resultats:
//    Ligne 18 : Erreur de syntaxe aux alentours de '{'
//    test_lex ne doit pas donner d'erreur
// 
// Attributs: exec incorrect automatique
//
// Historique:
//    cree le 19/01/2012


{


}

{

}

{

}
